# mujica_f1_modeler

./: .gitignore  README.md  align_tracks.py  cleanup_files.py  fastest_lap_emu.py  fix_table_paths.py  get_box_window.py  get_fastest_lap.py  isolated_tyre_degradation.py  long_dist_sim_with_box.py  main.py  pirelli_data_downloader.py  pyproject.toml  sprint_demo.py  t_r_compare.py  t_r_line.py  t_r_nonlinear.py  test_full_weekend_sim.py  test_practice_module.py  test_practice_simple.py  test_skill_system_integration.py  test_team_orders.py  tyre_degrade_sim_compensated.py  tyre_types.py
data/: driver_ratings.csv  drivers.json  drs_zones.json  pirelli_2024_data.json  pitlane_time.csv  sessions.json  spain_team.csv  track_characteristics.csv  track_lap_times.json  tracks.json
docs/: ARCHITECTURE.md  DRIVER_SKILLS_SYSTEM.md  DRS_SYSTEM.md  F1_SIMULATION_MODEL.md  INCIDENT_RESPONSE_PLAN.md  INCIDENT_SYSTEM_PLAN.md  LAPPING_UNLAPPING_PLAN.md  MONTE_CARLO_WEATHER_RESULTS.md  PENALTY_SYSTEM.md  QUALIFICATION_SYSTEM.md  SIMULATION_DEBUG_DIAGNOSIS.md  SPRINT_RACE_SYSTEM.md  START_SIMULATION_SUMMARY.md  STRATEGIST_DICE_RULES.md  STRATEGIST_SYSTEM.md  WEATHER_SYSTEM.md  WEATHER_SYSTEM_PLAN.md  box_time_explanation.md  dice_rolling_rules.md  fate_wheel_config.md  math_functions.txt  piastri_abstract_skill_result_v2.json  piastri_abstract_skill_result_v2.md  pit_stop_strategies_2022_2024.csv  spain_race_report_example.md  spain_team.csv  track_characteristics.csv  track_coefficients_explanation.md  track_coefficients_fastf1.csv  tyre_characteristics.md  vsc_speed_limit.md
(+218 files in other folders)
