[project]
name = "mujica-f1-modeler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastf1>=3.6.1",
    "openpyxl>=3.1.5",
    "pyqt6>=6.10.0",
    "seaborn>=0.13.2",
    "thefuzz>=0.22.1",
    "tqdm>=4.67.1",
]

[project.scripts]
drs-run = "drs.run_prototype:main"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.setuptools]
# Configure egg-info to be generated in tmp/ directory
egg-info = "tmp/mujica_f1_modeler.egg-info"
